--- a/siroop/index.html
+++ b/siroop/index.html
@@ -10,47 +10,54 @@
   <body>
     <div class="row">
       <div class="large-12 columns">
-        <h1>Baby & Spielzeug</h1>
+        <strong><h1>Baby & Spielzeug</h1></strong>
       </div>
     </div>
 
     <div class="row">
       <div class="columns small-8">
-        <img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space">
+        <img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space" height="1000" width="800">
+      </div>
+
+      <div class="medium-6 large-4 column">
+        <div class="panel">
+          <!-- <div class="callout p-box-1"> -->
+          <h3>Kategorien für Baby & Spielzeug</h3>
+
+          <ul>
+            <li><a<href="">Baby Geschenkartikel</a></li>
+            <li><a href="#">Baby unterwegs</a></li>
+            <li><a href="">Baby- & Kinderernährung</a></li>
+            <li><a href="">Babykleidung</a></li>
+            <li><a href="">Gesundheit & Pflege</a></li>
+            <li><a href="">Kindermöbel & Dekoration</a></li>
+            <li><a href="">RC & Modellbau</a></li>
+            <li><a href="">Schlafen & Kuscheln</a></li>
+            <li><a href="">Sicherheit</a></li>
+            <li><a href="">Spiele</a></li>
+            <li><a href="">Spielzeug</a></li>
+            <li><a href="">Umstandsmode</a></li>
+          </ul>
+          <div>
+        <!-- </div> -->
       </div>
     </div>
+    </div>
 
-    <div class="medium-6 large-4 column">
-        <div class="panel">
-          <h3>Sidebar</h3>
-
-          <h5>Lorem.</h5>
-          <ul>
-            <li><a href="">Lorem ipsum dolor.</a></li>
-            <li><a href="">Sequi tenetur, odit.</a></li>
-            <li><a href="">Quas, dolor, rerum.</a></li>
-            <li><a href="">Eveniet doloremque, voluptas.</a></li>
-            <li><a href="">Eius, voluptate, inventore.</a></li>
-          </ul>
-
+    <div class="row">
+      <div class="columns small-8">
+          <div class="yellow-box">
+            <img class="yellow-image" src="https://cdn.siroop.ch/media/images/sized/10/7e/1a/107e1a0dfd122d758ce78f9936dfe53d.200x200.jpg" alt="Space">
+            <img class="swiss-image" src="https://cdn.siroop.ch/cms/2016/02/SwissMap_Slider.png" alt="Space">
+          </div>
         </div>
       </div>
 
 
-    <div class="row">
-      <div class="columns small-6">
-        <img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space">
-      </div>
-    </div>
+<br></br>
+<br></br>
 
-
-
-
-    <div class="row">
-      <div class="large-8 columns">
-          <img class="banner-image" src="https://cdn.siroop.ch/media/images/sized/10/7e/1a/107e1a0dfd122d758ce78f9936dfe53d.200x200.jpg" alt="Space">
-      </div>
-    </div>
+<h3>Shopping-Inspiration für dich</h3>
 
 
 
