--- a/siroop/index.html
+++ b/siroop/index.html
@@ -46,9 +46,11 @@
 
     <div class="row">
       <div class="columns small-8">
+        <div class="callout">
           <div class="yellow-box">
             <img class="yellow-image" src="https://cdn.siroop.ch/media/images/sized/10/7e/1a/107e1a0dfd122d758ce78f9936dfe53d.200x200.jpg" alt="Space">
             <img class="swiss-image" src="https://cdn.siroop.ch/cms/2016/02/SwissMap_Slider.png" alt="Space">
+          </div>
           </div>
         </div>
       </div>
@@ -59,164 +61,231 @@
 
 <h3>Shopping-Inspiration für dich</h3>
 
+<div class="row small-up-2 medium-up-3 large-up-4">
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/70/ca/e1/70cae12b6861262c5afddc75a9bbf030.200x200.jpg" alt="product">
+    <p>Spardose Pirat Kapitän</p>
+    <p>ab CHF 29.90</p>
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/af/19/0b/af190b9f8d2102d9d005aad8f3b3ac61.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/75/52/53/75525369b43cdf8500ce50cfb32589aa.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/aa/d3/28/aad328fe2ba9eed8d684c26050ffcf39.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/a7/9d/3e/a79d3e32a4fc468fc4f7f8f916e783e0.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/63/d8/05/63d8058e8b9c4044ab411441c476e2a0.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/e3/85/3a/e3853a7311eb26e20775a973501428c9.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/0a/a4/0b/0aa40b612724dde59e200711761c30b2.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/dd/f1/3c/ddf13cc815e5ca0f9dbe45eff290e93f.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/46/8a/4a/468a4a94a8708363a54f3de12a586f9b.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/fd/43/70/fd43700c7643f8e110e70953cb75ccba.200x200.jpg" alt="product">
+  </div>
+  <div class="column column-block">
+    <img src="https://cdn.siroop.ch/media/images/sized/42/fb/be/42fbbec1c5ae687008801c1f97178843.200x200.jpg" alt="product">
+  </div>
+</div>
 
 
-
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
+<h3>Top Kategorien</h3>
 <br></br>
 
-
+  <div class="row small-up-2 medium-up-3 large-up-4">
+    <div class="column column-block">
+      <p>Baby unterwegs</p>
+      <p>Babykleidung</p>
+      <p>Sicherheit</p>
+    </div>
+    <div class="medium-3 columns">
+      <div class="column column-block">
+        <p>Gesundheit & Pflege</p>
+        <p>Spiele</p>
+      </div>
+    </div>
+  </div>
 
   <div class="row">
-      <div class="large-12 columns">
-        <div class="callout">
-          <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-          <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-          <p>Once you've exhausted the fun in this document, you should check out:</p>
-          <div class="row">
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
-            </div>
+    <div class="large-12 columns">
+      <div bottom=
+    </div>
+  </div>
+
+
+
+
+
+
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+
+
+
+<div class="row">
+    <div class="large-12 columns">
+      <div class="callout">
+        <h3>We&rsquo;re stoked you want to try Foundation! </h3>
+        <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
+        <p>Once you've exhausted the fun in this document, you should check out:</p>
+        <div class="row">
+          <div class="large-4 medium-4 columns">
+            <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
           </div>
-          <div class="row">
-            <div class="large-4 medium-4 medium-push-2 columns">
-              <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-            </div>
-            <div class="large-4 medium-4 medium-pull-2 columns">
-              <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-            </div>
+          <div class="large-4 medium-4 columns">
+            <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
+          </div>
+          <div class="large-4 medium-4 columns">
+            <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-4 medium-4 medium-push-2 columns">
+            <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
+          </div>
+          <div class="large-4 medium-4 medium-pull-2 columns">
+            <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="large-8 medium-8 columns">
-        <h5>Here&rsquo;s your basic grid:</h5>
-        <!-- Grid Example -->
+  <div class="row">
+    <div class="large-8 medium-8 columns">
+      <h5>Here&rsquo;s your basic grid:</h5>
+      <!-- Grid Example -->
 
+      <div class="row">
+        <div class="large-12 columns">
+          <div class="primary callout">
+            <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-6 medium-6 columns">
+          <div class="primary callout">
+            <p>Six columns</p>
+          </div>
+        </div>
+        <div class="large-6 medium-6 columns">
+          <div class="primary callout">
+            <p>Six columns</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-4 medium-4 small-4 columns">
+          <div class="primary callout">
+            <p>Four columns</p>
+          </div>
+        </div>
+        <div class="large-4 medium-4 small-4 columns">
+          <div class="primary callout">
+            <p>Four columns</p>
+          </div>
+        </div>
+        <div class="large-4 medium-4 small-4 columns">
+          <div class="primary callout">
+            <p>Four columns</p>
+          </div>
+        </div>
+      </div>
+
+      <hr />
+
+      <h5>We bet you&rsquo;ll need a form somewhere:</h5>
+      <form>
         <div class="row">
           <div class="large-12 columns">
-            <div class="primary callout">
-              <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</p>
-            </div>
+            <label>Input Label</label>
+            <input type="text" placeholder="large-12.columns" />
           </div>
         </div>
         <div class="row">
-          <div class="large-6 medium-6 columns">
-            <div class="primary callout">
-              <p>Six columns</p>
-            </div>
+          <div class="large-4 medium-4 columns">
+            <label>Input Label</label>
+            <input type="text" placeholder="large-4.columns" />
           </div>
-          <div class="large-6 medium-6 columns">
-            <div class="primary callout">
-              <p>Six columns</p>
-            </div>
+          <div class="large-4 medium-4 columns">
+            <label>Input Label</label>
+            <input type="text" placeholder="large-4.columns" />
           </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <p>Four columns</p>
-            </div>
-          </div>
-        </div>
-
-        <hr />
-
-        <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-        <form>
-          <div class="row">
-            <div class="large-12 columns">
+          <div class="large-4 medium-4 columns">
+            <div class="row collapse">
               <label>Input Label</label>
-              <input type="text" placeholder="large-12.columns" />
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
-            </div>
-            <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
-            </div>
-            <div class="large-4 medium-4 columns">
-              <div class="row collapse">
-                <label>Input Label</label>
-                <div class="input-group">
-                  <input type="text" placeholder="small-9.columns" class="input-group-field" />
-                  <span class="input-group-label">.com</span>
-                </div>
+              <div class="input-group">
+                <input type="text" placeholder="small-9.columns" class="input-group-field" />
+                <span class="input-group-label">.com</span>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Select Box</label>
-              <select>
-                <option value="husker">Husker</option>
-                <option value="starbuck">Starbuck</option>
-                <option value="hotdog">Hot Dog</option>
-                <option value="apollo">Apollo</option>
-              </select>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-6 medium-6 columns">
-              <label>Choose Your Favorite</label>
-              <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-            </div>
-            <div class="large-6 medium-6 columns">
-              <label>Check these out</label>
-              <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-              <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Textarea Label</label>
-              <textarea placeholder="small-12.columns"></textarea>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <div class="large-4 medium-4 columns">
-        <h5>Try one of these buttons:</h5>
-        <p><a href="#" class="button">Simple Button</a><br/>
-        <a href="#" class="success button">Success Btn</a><br/>
-        <a href="#" class="alert button">Alert Btn</a><br/>
-        <a href="#" class="secondary button">Secondary Btn</a></p>
-        <div class="callout">
-          <h5>So many components, girl!</h5>
-          <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-          <a href="http://foundation.zurb.com/sites/docs/" class="small button">Go to Foundation Docs</a>
         </div>
+        <div class="row">
+          <div class="large-12 columns">
+            <label>Select Box</label>
+            <select>
+              <option value="husker">Husker</option>
+              <option value="starbuck">Starbuck</option>
+              <option value="hotdog">Hot Dog</option>
+              <option value="apollo">Apollo</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-6 medium-6 columns">
+            <label>Choose Your Favorite</label>
+            <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
+            <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
+          </div>
+          <div class="large-6 medium-6 columns">
+            <label>Check these out</label>
+            <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
+            <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-12 columns">
+            <label>Textarea Label</label>
+            <textarea placeholder="small-12.columns"></textarea>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="large-4 medium-4 columns">
+      <h5>Try one of these buttons:</h5>
+      <p><a href="#" class="button">Simple Button</a><br/>
+      <a href="#" class="success button">Success Btn</a><br/>
+      <a href="#" class="alert button">Alert Btn</a><br/>
+      <a href="#" class="secondary button">Secondary Btn</a></p>
+      <div class="callout">
+        <h5>So many components, girl!</h5>
+        <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
+        <a href="http://foundation.zurb.com/sites/docs/" class="small button">Go to Foundation Docs</a>
       </div>
     </div>
+  </div>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/dist/what-input.js"></script>
