--- a/siroop/index.html
+++ b/siroop/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
+    <!-- <div class="row">
+      <div class="large-12 columns">
+        <strong><h1>Baby & Spielzeug</h1></strong>
+      </div>
+    </div>
+    <div class="row">
+  <div class="medium-9 columns"><img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space" height="1000" width="800"></div>
+  <div class="medium-3 columns">
+    <h3>Kategorien für Baby & Spielzeug</h3>
+          <ul>
+            <li><a<href="">Baby Geschenkartikel</a></li>
+            <li><a href="#">Baby unterwegs</a></li>
+            <li><a href="">Baby- & Kinderernährung</a></li>
+            <li><a href="">Babykleidung</a></li>
+            <li><a href="">Gesundheit & Pflege</a></li>
+            <li><a href="">Kindermöbel & Dekoration</a></li>
+            <li><a href="">RC & Modellbau</a></li>
+            <li><a href="">Schlafen & Kuscheln</a></li>
+            <li><a href="">Sicherheit</a></li>
+            <li><a href="">Spiele</a></li>
+            <li><a href="">Spielzeug</a></li>
+            <li><a href="">Umstandsmode</a></li>
+          </ul></div>
+</div> -->
+
+
+
     <div class="row">
       <div class="large-12 columns">
         <strong><h1>Baby & Spielzeug</h1></strong>
@@ -16,12 +43,16 @@
 
     <div class="row">
       <div class="columns small-8">
-        <img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space" height="1000" width="800">
+        <div class="yellow-box">
+          <img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space" height="1000" width="800">
+          <img class="yellow-image" src="https://cdn.siroop.ch/media/images/sized/10/7e/1a/107e1a0dfd122d758ce78f9936dfe53d.200x200.jpg" alt="Space">
+          <img class="swiss-image" src="https://cdn.siroop.ch/cms/2016/02/SwissMap_Slider.png" alt="Space">
+       </div>
       </div>
+
 
       <div class="medium-6 large-4 column">
         <div class="panel">
-          <!-- <div class="callout p-box-1"> -->
           <h3>Kategorien für Baby & Spielzeug</h3>
 
           <ul>
@@ -39,68 +70,61 @@
             <li><a href="">Umstandsmode</a></li>
           </ul>
           <div>
-        <!-- </div> -->
-      </div>
-    </div>
-    </div>
-
-    <div class="row">
-      <div class="columns small-8">
-        <div class="callout">
-          <div class="yellow-box">
-            <img class="yellow-image" src="https://cdn.siroop.ch/media/images/sized/10/7e/1a/107e1a0dfd122d758ce78f9936dfe53d.200x200.jpg" alt="Space">
-            <img class="swiss-image" src="https://cdn.siroop.ch/cms/2016/02/SwissMap_Slider.png" alt="Space">
-          </div>
-          </div>
         </div>
       </div>
-
+    </div>
+  </div>
 
 <br></br>
 <br></br>
+
+
 
 <h3>Shopping-Inspiration für dich</h3>
 
 <div class="row small-up-2 medium-up-3 large-up-4">
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/70/ca/e1/70cae12b6861262c5afddc75a9bbf030.200x200.jpg" alt="product">
     <p>Spardose Pirat Kapitän</p>
-    <p>ab CHF 29.90</p>
+    <strong><p>ab CHF 29.90</p></strong>
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/af/19/0b/af190b9f8d2102d9d005aad8f3b3ac61.200x200.jpg" alt="product">
+    <p>ANGELCARE© Babyphone AC423D</p>
+    <strong><span>CHF 108.00</span></strong>
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/75/52/53/75525369b43cdf8500ce50cfb32589aa.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/aa/d3/28/aad328fe2ba9eed8d684c26050ffcf39.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/a7/9d/3e/a79d3e32a4fc468fc4f7f8f916e783e0.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/63/d8/05/63d8058e8b9c4044ab411441c476e2a0.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/e3/85/3a/e3853a7311eb26e20775a973501428c9.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/0a/a4/0b/0aa40b612724dde59e200711761c30b2.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/dd/f1/3c/ddf13cc815e5ca0f9dbe45eff290e93f.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/46/8a/4a/468a4a94a8708363a54f3de12a586f9b.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/fd/43/70/fd43700c7643f8e110e70953cb75ccba.200x200.jpg" alt="product">
   </div>
-  <div class="column column-block">
+  <div class="column column-block promoted-item">
     <img src="https://cdn.siroop.ch/media/images/sized/42/fb/be/42fbbec1c5ae687008801c1f97178843.200x200.jpg" alt="product">
   </div>
 </div>
+
 
 
 <h3>Top Kategorien</h3>
@@ -122,170 +146,15 @@
 
   <div class="row">
     <div class="large-12 columns">
-      <div bottom=
+      <div class="panel">
+      <h2 class="text">siroop Flaschenpost</h2>
+    </div>
     </div>
   </div>
 
 
 
 
-
-
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-
-
-
-<div class="row">
-    <div class="large-12 columns">
-      <div class="callout">
-        <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-        <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-        <p>Once you've exhausted the fun in this document, you should check out:</p>
-        <div class="row">
-          <div class="large-4 medium-4 columns">
-            <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-          </div>
-          <div class="large-4 medium-4 columns">
-            <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
-          </div>
-          <div class="large-4 medium-4 columns">
-            <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 medium-push-2 columns">
-            <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-          </div>
-          <div class="large-4 medium-4 medium-pull-2 columns">
-            <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-8 medium-8 columns">
-      <h5>Here&rsquo;s your basic grid:</h5>
-      <!-- Grid Example -->
-
-      <div class="row">
-        <div class="large-12 columns">
-          <div class="primary callout">
-            <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="large-6 medium-6 columns">
-          <div class="primary callout">
-            <p>Six columns</p>
-          </div>
-        </div>
-        <div class="large-6 medium-6 columns">
-          <div class="primary callout">
-            <p>Six columns</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="large-4 medium-4 small-4 columns">
-          <div class="primary callout">
-            <p>Four columns</p>
-          </div>
-        </div>
-        <div class="large-4 medium-4 small-4 columns">
-          <div class="primary callout">
-            <p>Four columns</p>
-          </div>
-        </div>
-        <div class="large-4 medium-4 small-4 columns">
-          <div class="primary callout">
-            <p>Four columns</p>
-          </div>
-        </div>
-      </div>
-
-      <hr />
-
-      <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-      <form>
-        <div class="row">
-          <div class="large-12 columns">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-12.columns" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 columns">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-4.columns" />
-          </div>
-          <div class="large-4 medium-4 columns">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-4.columns" />
-          </div>
-          <div class="large-4 medium-4 columns">
-            <div class="row collapse">
-              <label>Input Label</label>
-              <div class="input-group">
-                <input type="text" placeholder="small-9.columns" class="input-group-field" />
-                <span class="input-group-label">.com</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-12 columns">
-            <label>Select Box</label>
-            <select>
-              <option value="husker">Husker</option>
-              <option value="starbuck">Starbuck</option>
-              <option value="hotdog">Hot Dog</option>
-              <option value="apollo">Apollo</option>
-            </select>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-6 medium-6 columns">
-            <label>Choose Your Favorite</label>
-            <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-            <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-          </div>
-          <div class="large-6 medium-6 columns">
-            <label>Check these out</label>
-            <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-            <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-12 columns">
-            <label>Textarea Label</label>
-            <textarea placeholder="small-12.columns"></textarea>
-          </div>
-        </div>
-      </form>
-    </div>
-
-    <div class="large-4 medium-4 columns">
-      <h5>Try one of these buttons:</h5>
-      <p><a href="#" class="button">Simple Button</a><br/>
-      <a href="#" class="success button">Success Btn</a><br/>
-      <a href="#" class="alert button">Alert Btn</a><br/>
-      <a href="#" class="secondary button">Secondary Btn</a></p>
-      <div class="callout">
-        <h5>So many components, girl!</h5>
-        <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-        <a href="http://foundation.zurb.com/sites/docs/" class="small button">Go to Foundation Docs</a>
-      </div>
-    </div>
-  </div>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/dist/what-input.js"></script>
