--- a/siroop/index.html
+++ b/siroop/index.html
@@ -8,32 +8,6 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <!-- <div class="row">
-      <div class="large-12 columns">
-        <strong><h1>Baby & Spielzeug</h1></strong>
-      </div>
-    </div>
-    <div class="row">
-  <div class="medium-9 columns"><img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space" height="1000" width="800"></div>
-  <div class="medium-3 columns">
-    <h3>Kategorien für Baby & Spielzeug</h3>
-          <ul>
-            <li><a<href="">Baby Geschenkartikel</a></li>
-            <li><a href="#">Baby unterwegs</a></li>
-            <li><a href="">Baby- & Kinderernährung</a></li>
-            <li><a href="">Babykleidung</a></li>
-            <li><a href="">Gesundheit & Pflege</a></li>
-            <li><a href="">Kindermöbel & Dekoration</a></li>
-            <li><a href="">RC & Modellbau</a></li>
-            <li><a href="">Schlafen & Kuscheln</a></li>
-            <li><a href="">Sicherheit</a></li>
-            <li><a href="">Spiele</a></li>
-            <li><a href="">Spielzeug</a></li>
-            <li><a href="">Umstandsmode</a></li>
-          </ul></div>
-</div> -->
-
-
 
     <div class="row">
       <div class="large-12 columns">
@@ -45,9 +19,13 @@
       <div class="columns small-8">
         <div class="yellow-box">
           <img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space" height="1000" width="800">
+          <div class= "title"
+          <h5>Top Produkt</h5>
+          <p>PLAYMOBIL Police-Kommandozentrale mit Gefängnis</p>
           <img class="yellow-image" src="https://cdn.siroop.ch/media/images/sized/10/7e/1a/107e1a0dfd122d758ce78f9936dfe53d.200x200.jpg" alt="Space">
           <img class="swiss-image" src="https://cdn.siroop.ch/cms/2016/02/SwissMap_Slider.png" alt="Space">
        </div>
+      </div>
       </div>
 
 
