--- a/siroop/index.html
+++ b/siroop/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>siroop assignement</title>
+    <title>siroop assignment</title>
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
@@ -19,14 +19,17 @@
       <div class="columns small-8">
         <div class="yellow-box">
           <img class="banner-image" src="https://cdn.siroop.ch/media/images/categories/header/fr050300.jpg" alt="Space" height="1000" width="800">
-          <div class= "title"
-          <h5>Top Produkt</h5>
-          <p>PLAYMOBIL Police-Kommandozentrale mit Gefängnis</p>
+          <div class= "title">
+          <strong><h5>Top Produkt</h5></strong>
+          <br></br>
+          <p class="test">Police-Kommandozentrale mit Gefängnis CHF 20</p>
           <img class="yellow-image" src="https://cdn.siroop.ch/media/images/sized/10/7e/1a/107e1a0dfd122d758ce78f9936dfe53d.200x200.jpg" alt="Space">
           <img class="swiss-image" src="https://cdn.siroop.ch/cms/2016/02/SwissMap_Slider.png" alt="Space">
-       </div>
+          <p class="again">Unsere Pick-up-Stationen: überall, wo du bist - zu jeder Zeit</p>
+          </div>
+        </div>
       </div>
-      </div>
+
 
 
       <div class="medium-6 large-4 column">
@@ -122,16 +125,21 @@
     </div>
   </div>
 
+<br></br>
+
   <div class="row">
     <div class="large-12 columns">
-      <div class="panel">
-      <h2 class="text">siroop Flaschenpost</h2>
-    </div>
+      <div class="newsletter-box">
+        <h2 class="sirop">siroop Flaschenpost</h2>
+        <p class="lass">Lass dich inspirieren. Erhalte regelmässig Informationen über unsere Produkte, Aktionen,
+          Angebote und die aktuellen Trends direkt per Mail.</p>
+          <a href="#" class="button">Newsletter Abonieren</a>
+        <div class="small-4 columns">
+            <img class="flaschen" src="https://cdn.siroop.ch/media/images/c/flaschenpost.png" alt="product">
+        </div>
+      </div>
     </div>
   </div>
-
-
-
 
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
