responsive newsletter box

--- a/siroop/index.html
+++ b/siroop/index.html
@@ -127,19 +127,16 @@
 
 <br></br>
 
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="newsletter-box">
-        <h2 class="sirop">siroop Flaschenpost</h2>
-        <p class="lass">Lass dich inspirieren. Erhalte regelmässig Informationen über unsere Produkte, Aktionen,
-          Angebote und die aktuellen Trends direkt per Mail.</p>
+
+    <div class="newsletter-box">
+      <h4 class="sirop">siroop Flaschenpost</h4>
+        <p class="lass">Lass dich inspirieren. Erhalte regelmässig Informationen über unsere Produkte, Aktionen, Angebote und die aktuellen Trends direkt per Mail.</p>
           <a href="#" class="button">Newsletter Abonieren</a>
-        <div class="small-4 columns">
-            <img class="flaschen" src="https://cdn.siroop.ch/media/images/c/flaschenpost.png" alt="product">
-        </div>
+      <div class="small-4 columns">
+        <img class="flaschen" src="https://cdn.siroop.ch/media/images/c/flaschenpost.png" name="viewport" content="width=device-width, initial-scale=1.0">
       </div>
     </div>
-  </div>
+
 
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
